# lidar-bike

./: .gitignore  README.md  berrygpsimu.md  devshell.nix  flake.nix  readme.md  test-gps.py
berry_driver/: CMakeLists.txt  package.xml
imu-gps-driver/: CMakeLists.txt  default.nix  flake.nix
imu-gps-driver/cmake/: driverConfig.cmake.in
imu-gps-driver/src/: driver.cpp
modules/: linux-network.nix  system.nix
nixos/: driver_launch_meta.nix  flake.nix  readme.md
nixos/driver_launch/: package.xml  setup.py
nixos/driver_launch/launch/: mutli_node_launch.py
nixos/driver_launch/meta_launch/: multi_node_launch.py
nixos/imu_driver/: package.xml
nixos/imu_driver/src/: driver.cpp  imu_node.cpp  main.cpp
pkgs/: imu_gps_driver.nix  lidar_camera_tf_pub.nix
pkgs/driver_launch/: setup.py
pkgs/imu_driver/: CMakeLists.txt
pkgs/imu_driver/include/imu_driver/: driver.hpp
pkgs/imu_driver/src/: imu_node.cpp
pkgs/lidar_camera_tf_pub/lidar_camera_tf_pub/: pub.py
test_nix_ros_overlay/: flake.nix  lidar_camera_tf_pub.nix  simple_ouster_driver.nix
test_nix_ros_overlay/config/: driver_config.yaml
test_nix_ros_overlay/imu-gps-driver/: CMakeLists.txt
test_nix_ros_overlay/imu-gps-driver/include/: LSM6DSL.h  driver.hpp
test_nix_ros_overlay/imu-gps-driver/src/: main.cpp
test_nix_ros_overlay/imu_driver/: CMakeLists.txt  setup.py
test_nix_ros_overlay/imu_driver/include/imu_driver/: LIS3MDL.h  driver.hpp
test_nix_ros_overlay/imu_driver/src/: driver.cpp  imu_node.cpp
